<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ContactUsActivity"
    tools:showIn="@layout/activity_contact_us">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:gravity="center"
            android:text="@string/large_text" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_gravity="right|center_vertical"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:tint="@color/colorPrimary"
            android:tintMode="src_atop"
            android:src="@drawable/ic_call_black_24dp" />

        <TextView
            android:id="@+id/contact1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/contact1"
            android:textColor="@color/btn_login"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/contact2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/contact2"
            android:textColor="@color/btn_login"
            android:textSize="20dp" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:src="@drawable/ic_email_black_24dp" />

        <TextView
            android:id="@+id/email1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/email1"
            android:textColor="@color/btn_login"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/email2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/email2"
            android:textColor="@color/btn_login"
            android:textSize="20dp" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>